# nvidia-video-codec-sdk

./: .gitignore  Cargo.toml  build.rs  convert_with_sei.bat  dump.ps1  rustfmt.toml
examples/: decoder_egui.rs  generate_playback_assets.rs  importing_image_buffers.rs  importing_image_buffers_segment.rs  importing_vulkan_buffers.rs  importing_vulkan_buffers_hevc.rs  importing_vulkan_buffers_segment.rs  importing_vulkan_buffers_segment_hevc.rs  mp4_direct_output.rs  optimized_realtime_recording.rs  parse_bitstream.rs  parse_bitstream_hevc.rs  parse_bitstream_segment.rs  picture_timing_sei.rs  playback_egui_indexed.rs  practical_realtime_recording.rs  pts_encoding.rs  realtime_recording.rs  structured_realtime_encoder.rs  trans_bitstream_mp4.rs
src/: lib.rs
src/safe/: api.rs  buffer.rs  decoder.rs  encoder.rs  mod.rs  result.rs  session.rs
src/sys/: mod.rs
tests/: blanks.rs  new_api_gpu_smoke.rs  nvdec_rtp_roundtrip.rs  rtp_support.rs
tests/support/: mod.rs  quality_metrics.rs  rtp_pipeline.rs  rtp_reorder.rs
