[package]
name = "nvidia-video-codec-sdk"
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["ci-check"]

[dependencies]
cudarc = { version = "0.17.3", features = ["cuda-version-from-build-system"] }

[dev-dependencies]
vulkano = "0.35.2"
libc = "0.2.175"
memmap2 = "0.9.8"

# parse nal unit(h264)
h264-parser = "0.2.0"
# parse nal unit(hevc)
hevc_parser = "0.6.9"

# mp4 muxing/demuxing
shiguredo_mp4 = "2025.2.0"

[target.'cfg(windows)'.dependencies]
ash = { version = "0.38.0", default-features = false, features = ["loaded"] }

[features]
default = []
# workaround to make the ci similar to cudarc
ci-check = ["cudarc/cuda-12020", "cudarc/dynamic-loading"]
