[package]
name = "nvidia-video-codec-sdk"
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["ci-check"]

[dependencies]
cudarc = { version = "0.17.3", features = ["cuda-version-from-build-system"] }
image = "0.25.6"

[dev-dependencies]
vulkano = "0.35.2"
libc = "0.2.175"
memmap2 = "0.9.8"

# parse nal unit(h265/hevc)
scuffle-h265 = "0.2.2"

# mp4 muxing/demuxing
shiguredo_mp4 = "2025.2.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
ash = { version = "0.38.0", default-features = false, features = ["loaded"] }

[features]
default = []
# workaround to make the ci similar to cudarc
ci-check = ["cudarc/cuda-12020", "cudarc/dynamic-loading"]
