[package]
name = "nvidia-video-codec-sdk"
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["ci-check"]

[dependencies]
cudarc = { version = "0.19.2", features = ["cuda-version-from-build-system"] }
image = "0.25.9"
anyhow = "1.0.101"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
vulkano = "0.35.2"
libc = "0.2.182"
memmap2 = "0.9.10"
eframe = "0.33.3"

# parse nal unit(h265/hevc)
scuffle-h265 = "0.2.2"

# mp4 muxing/demuxing
shiguredo_mp4 = "2026.1.0"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
rtc = "0.9.0"
bytes = "1.11.1"

[target.'cfg(windows)'.dependencies]
ash = { version = "0.38.0", default-features = false, features = ["loaded"] }

[features]
default = []
# workaround to make the ci similar to cudarc
ci-check = ["cudarc/cuda-12020", "cudarc/dynamic-loading"]
